<resources>

    <!-- Nome da aplicação -->
    <string name="app_name">+Dose</string>

    <!-- Titulos e subtitulos das Activities -->
    <string name="title_activity_pacientes">Pessoas</string>
    <string name="title_activity_paciente_details">Detalhes</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="title_activity_vacinas">Vacinas</string>
    <string name="title_activity_aplicacao_activty">Aplicacao</string>
    <string name="subtitle_activity_vacinas">
        Informe quais vacinas já tomou!
    </string>
    <string name="subtitle_activity_cadastro">
        Dados do vacinado.
    </string>

    <!-- Elementos dos formulários -->
    <string name="action_add">Adicionar</string>
    <string name="action_edit">Editar</string>
    <string name="action_remove">Remover</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="Sexo">sexo</string>
    <string name="menu_confirm_label">Confirmar</string>
    <string name="menu_cancel_label">Cancelar</string>
    <string name="abrv_masculino">M</string>
    <string name="abrv_feminino">F</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="visualizar_vacinas">Visualizar Vacinas</string>

    <!-- Elementos de diálogos -->
    <string name="confirmar">Confirmar</string>
    <string name="alerta">Alerta</string>
    <string name="ok">OK</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="confirmar_cadastro_paciente">
        Deseja realmente salvar o paciente?
    </string>
    <string name="confirmar_delecao_paciente">
        Deseja realmente deletar o paceiente?
    </string>
    <string name="alerta_data_futura">
        A data de nascimento nao pode ser maior que a data atual!
    </string>
    <string name="alerta_campos_vazios">
        Preencha todos os tampos corretamente!
    </string>

    <!-- Informações -->
    <string name="info_paciente">paciente</string>
    <string name="info_deletar">deletado!</string>
    <string name="info_deletar_fem">deletada!</string>
    <string name="info_salvar">salvo!</string>
    <string name="info_salvar_fem">salva!</string>
    <string name="info_dose_aplicada">Tomou em:</string>
    <string name="info_toast_paciente_lista_1">Adicione novos pacientes clicando em </string>
    <string name="info_toast_paciente_lista_2"> na barra superior.</string>
    <string name="tab_pendentes">VACINAS PRENDENTES</string>
    <string name="tab_tomadas">VACINAS TOMADAS</string>

</resources>
