<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="br.com.ifpb.solarsoft.activities.PacienteDetailsActivity">

    <ImageView
        android:id="@+id/img_foto_detalhes"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baby_photo" />

    <TextView
        android:id="@+id/tv_nome_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="Nome e Sobrenome"
        android:textSize="30sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ad4c4c4c" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visualizar_vacinas"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_selector"
        android:textStyle="bold"
        android:textColor="#ffffffff"
        android:onClick="mostrarVacinas"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_nascimento"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_data_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Data Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/Sexo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_sexo_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sexo Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
