<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:weightSum="1"
    tools:context="br.com.ifpb.solarsoft.activities.PacienteDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_foto_cadpaciente"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_image" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/tv_nome_paciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:text="@string/nome"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/et_nome_paciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tv_nome_paciente"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/tv_sobrenome_paciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/et_nome_paciente"
                    android:paddingTop="15dp"
                    android:text="@string/sobrenome"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/et_sobrenome_paciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tv_sobrenome_paciente"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/tv_data_nasc_paciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/et_sobrenome_paciente"
                    android:paddingTop="15dp"
                    android:text="@string/data_nascimento"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/et_data_paciente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tv_data_nasc_paciente"
                    android:layout_toLeftOf="@+id/btn_data_paciente"
                    android:layout_toStartOf="@+id/btn_data_paciente"
                    android:ems="10"
                    android:maxLength="10"
                    android:hint="00/00/0000"
                    android:inputType="date" />

                <Button
                    android:id="@+id/btn_data_paciente"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/tv_sexo_paciente"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:drawableBottom="@android:drawable/ic_menu_my_calendar"
                    android:background="@drawable/button_selector"
                    android:onClick="getDateByDatePicker"/>

                <TextView
                    android:id="@+id/tv_sexo_paciente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/et_data_paciente"
                    android:text="@string/Sexo"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioGroup
                    android:id="@+id/rg_sexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_sexo_paciente"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_sexo_m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/abrv_masculino"
                        android:onClick="onRadioButtonClicked"/>

                    <RadioButton
                        android:id="@+id/rb_sexo_f"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/abrv_feminino"
                        android:onClick="onRadioButtonClicked"/>
                </RadioGroup>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab_camera_paciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_camera"
        fab:fab_colorNormal="@color/primary"
        fab:fab_colorPressed="@color/primary_pressed"
        fab:fab_colorRipple="@color/ripple"
        android:onClick="captureByCamera"/>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab_imagem_paciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fab_camera_paciente"
        android:layout_alignStart="@+id/fab_camera_paciente"
        android:layout_below="@+id/fab_camera_paciente"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_images"
        fab:fab_colorNormal="@color/primary"
        fab:fab_colorPressed="@color/primary_pressed"
        fab:fab_colorRipple="@color/ripple"
        android:onClick="loadImage"/>
</RelativeLayout>